@@ -1,18 +1,23 @@
 ---
 name: SVN-Notify-Mirror
-version: 0.03
+version: 0.031
 author:
-  - John Peacock <jpeacock@cpan.org>
+  - 'John Peacock <jpeacock@cpan.org>'
 abstract: Keep a mirrored working copy of a repository path
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
   Module::Build: 0.2611
 provides:
   SVN::Notify::Mirror:
     file: lib/SVN/Notify/Mirror.pm
-    version: 0.03
+    version: 0.031
   SVN::Notify::Mirror::Rsync:
     file: lib/SVN/Notify/Mirror/Rsync.pm
   SVN::Notify::Mirror::SSH:
     file: lib/SVN/Notify/Mirror/SSH.pm
-generated_by: Module::Build version 0.2611
+generated_by: Module::Build version 0.2707
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
